Added Mac-crap to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,16 @@ out/
 Thumbs.db
 ehthumbs.db
 Desktop.ini
+
+# Mac
+.DS_Store
+.AppleDouble
+.LSOverride
+._*
+.Spotlight-V100
+.Trashes
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
