--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
 			<artifactId>spark-core</artifactId>
 			<version>2.1</version>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.6</version>
+		</dependency>
 	</dependencies>
 
 </project>
